fix rollsound letter-spacing

--- a/all.css
+++ b/all.css
@@ -352,7 +352,7 @@ input[type="file"] {
 }
 .rollSound {
     margin-left: 25%;
-    letter-spacing: 2px;
+    letter-spacing: 0.5px;
 }
 
 /*  Dum-Dum  */
